ctms-commons history
====================

1.1.2
-----

### suite-authorization

- Improve code separation and OSGi metadata to allow the bundle to be
  used in contexts where the suite auth description classes
  (SuiteRole, SuiteRoleMembership, etc.) are used without CSM.

1.1.1
-----

### all

- Update publish infrastructure to build artifacts for the new NCI
  Nexus repo & release process.

- Update caGrid dependencies to 1.4.

1.1.0
-----

### all

- Update dev env to JRuby 1.6.2 and buildr 1.4.6.

- Replace Spring EBR dependencies with standard M2 versions. While I
  (RMS) am opposed to this, none of the other projects use OSGi
  (yet). Since PSC uses whitelisted dependencies anyway, it only
  benefits from ctms-commons using EBR deps insofar as it ensures that
  ctms-commons only uses EBR-available versions of things. The
  benefits to the other projects (which all use ivy's transitive
  dependency support) probably outweigh PSC's concern.

- Remove ctms-commons' copy of Spring's
  PropertyPlaceholderConfigurer. The feature that ctms-commons'
  version added is available in the built in one in Spring 2.5 and
  later. The ctms-commons version has been deprecated since at least
  ctms-commons 1.0.0.

- Update Spring dependency to 3.0.7.

- Update Hibernate dependency to 3.6.4.Final.

- Update caGrid dependency to 1.3.

1.0.9
-----

### all

- Improved the descriptive parts of the OSGi metadata for the modules which
  are OSGi bundles.

### web

- Modified WebTools#requestPropertiesToMap to suppress exceptions from
  property accessors.

1.0.8
-----

### core

- Include `catalina.base` on the search path for
  DataSourceSelfDiscoveringPropertiesFactoryBean.  This is more correct
  than `catalina.home`, but the latter is left for backwards compatibility.
  (In most cases they will be the same.)

1.0.7
-----

### suite-authorization

- Change SuiteRoleMembershipLoader#getProvisioningRoleMemberships to